[package]
name = "tirnanog"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
  "bevy_asset",
  "bevy_scene",
  "bevy_winit",
  "bevy_render",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_gltf",
  "multi_threaded",
  "x11",
  "png",
  "tonemapping_luts",
  "default_font"
] }
bevy_rapier3d = "0.27"
rand = "0.8"
